--- a/html/style.css
+++ b/html/style.css
@@ -1,94 +1,228 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap');
 body {
-    display: none;
     background-color: transparent;
+    user-select: none;
 }
 #app {
+    display: none;
+
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 500px;
-    height: 600px;
+    width: 40%;
+    height: 60%;
 
-    background-color: rgba(0, 0, 0, 0.774);
+    background-color: #2a2a2a;
 
-    border-radius: 20px;
-    border: 5px solid white;
+    border-radius: 10px;
     
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     font-family: 'Nunito', sans-serif;
     color: white;
     text-align: center;
 
     padding: 10px 10px 10px 10px;
 }
+.hopin {
+    animation: hopin 1s;
+}
+.hopout {
+    animation: hopout 1.1s;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    gap: 5px;
+}
+.container .row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 70%;
+    padding: 3px;
+    background-color: #3a3a3a;
+    border-radius: 4px;
+}
+.container .row * {
+    width:50%;
+}
+
+
+.btn {
+    background-color: #3a3a3a;
+    color: white;
+    transition: all 1s;
+    font-family: 'Nunito', sans-serif;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+}
+.btn:hover {
+    background-color: #4f4f4f;
+}
+
+
+.inp {
+    background-color: #3a3a3a;
+    color: white;
+    border: none;
+    font-family: 'Nunito', sans-serif;
+    border-radius: 5px;
+    padding: 5px;
+}
+.inp:focus {
+    outline: none;
+}
+
+.player-actions {
+    display: flex;
+    flex-direction: row;
+    width: calc(70% + 6px);
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 5px;
+}
+.player-actions .btn {
+    margin-right: 5px;
+    width: 20%;
+}
+.player-actions .inp {
+    width: 80%;
+}
 
 .close-btn {
     position: absolute;
-    top: 15px; 
-    right: 15px; 
-    font-size: 1.5rem;
-    color: white;
-    transition: all 1s;
-}
-.close-btn:hover {
-    color: black;
+    top: 15px;
+    right: 15px;
+    font-size: 1.4rem;
 }
 
-.form-check-input {
-    background-color: transparent!important;
-    border: 1px solid white;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e")!important;
+.click-action {
+    cursor: pointer;
 }
-.form-check-input:checked {
-    background-color: transparent!important;
-    border: 1px solid white;
+.click-action:focus {
+    animation: onclick 0.5s;
 }
-
-.label {
-    margin-top: 20px;
+.click-action:active {
+    animation: none;
 }
 
-.centered {
-    justify-content: center;
-    display: flex;
-    flex-wrap: wrap;
-}
-.form-control {
-    width: 70%;
-    background-color:  transparent!important;
-    color: white!important;
-    text-align:center;
-}
-.form-control::placeholder {
-    color: white!important;
-    opacity: 1;
-}
-.update-btn {
-    margin-top: 10px;
-    color: white;
-    border: 1px solid white;
-    transition: all 1s;
-}
-.update-btn:hover {
-    color: black;
-    border: 1px solid black;
-}
-
-.player-table {
-    margin-top: 15px;
-    width: 90%;
-}
 .table-label {
     font-size: 120%;
 }
-.player {
-    padding-top: 5px;
-    padding-bottom: 5px;
+.player-data {
+    cursor: pointer;
 }
 
-::-webkit-scrollbar {
+/*https://codepen.io/ekeric13/pen/oYoXbK*/
+.check {
+    font-size: 16px;
+    position: relative;
+    color: white;
+    width: 1.1em!important;
+    height: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+.check::before {
+    content: "";
+    height: .2em;
+    width: .7em;
+    border-radius: 3px;
+    background: white;
+    position: absolute;
+    top: .65em;
+    left: 0em;
+    transform: rotate(45deg);
+    transition: transform .5s ease-in-out, width .5s ease-in-out, top .5s ease-in-out, left .5s ease-in-out;
+}
+.check::after { 
+    content: "";
+    height: .2em;
+    width: 1.2em;
+    border-radius: 3px;
+    background: white;
+    position: absolute;
+    top: .4em;
+    left: .25em;
+    transform: rotate(-55deg);
+    transition: transform .5s ease-in-out;
+} 
+.xmark::before {
+    transform: rotate(-45deg);
+    width: 1.2em;
+    top: .4em;
+    left: 0em; 
+} 
+.xmark::after {
+    transform: rotate(45deg);
+    left: 0em; 
+}
+.disabled {
+    pointer-events: none;
+    color: rgb(175, 175, 175);
+}
+.disabled::before {
+    background: rgb(175, 175, 175);
+}
+.disabled::after {
+    background: rgb(175, 175, 175);
+}
+   
+body::-webkit-scrollbar {
     display: none;
+}
+#app::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 255, 255);
+    border: 5px solid transparent;
+    border-radius: 10px;
+    background-clip: padding-box;  
+}
+#app::-webkit-scrollbar {
+    width: 16px;
+}
+
+@keyframes onclick {
+    0% {
+        transform: scale(1, 1);
+    }
+    50% {
+        transform: scale(0.8, 0.8);
+    }
+    100% {
+        transform: scale(1, 1);
+    }
+}
+@keyframes hopin {
+    0% {
+        transform: translate(-50%, -50%) scale(0.1, 0.1);
+    }
+    50% {
+        transform: translate(-50%, -50%) scale(1.1, 1.1);
+    }
+    70% {
+        transform: translate(-50%, -50%) scale(0.9, 0.9);
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1, 1);
+    }
+}
+@keyframes hopout {
+    0% {
+        transform: translate(-50%, -50%) scale(1, 1);
+    }
+    20% {
+        transform: translate(-50%, -50%) scale(1.1, 1.1);
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(0.1, 0.1);
+    }
 }
